--- a/EmployeeDB/views/index.jade
+++ b/EmployeeDB/views/index.jade
@@ -8,10 +8,10 @@ block content
             div.created_at= employee.created_at
             div.title= employee.title 
             div.name= employee.name
-                form( method="post", action="/employee/:id/delete") 
+                form( method="post", action="/sample-node-mongo-app/employee/:id/delete") 
                     input(name="_id", type="hidden", value=employee._id.toHexString()) 
                     input(id="delete", value="X", type="submit")
-                form( method="get", action="/employee/:id/edit") 
+                form( method="get", action="/sample-node-mongo-app/employee/:id/edit") 
                     input(name="_id", type="hidden", value=employee._id.toHexString()) 
                     input(id="edit", value="Edit", type="submit")
-        a(href="/employee/new")!= "Add New Employee"
+        a(href="/sample-node-mongo-app/employee/new")!= "Add New Employee"
