--- a/EmployeeDB/views/employee_edit.jade
+++ b/EmployeeDB/views/employee_edit.jade
@@ -14,4 +14,4 @@ block content
                     input(type="text", name="name", id="editEmployeeName", value=employee.name)
                 div#editEmployeeSubmit
                     input(type="submit", value="Update")
-        a(href="/")!= "Back to Employee List"
+        a(href="/sample-node-mongo-app/")!= "Back to Employee List"
