--- a/EmployeeDB/views/employee_new.jade
+++ b/EmployeeDB/views/employee_new.jade
@@ -13,4 +13,4 @@ block content
                     input(type="text", name="name", id="editEmployeeName")
                 div#editEmployeeSubmit
                     input(type="submit", value="Save")
-        a(href="/")!= "Back to Employee List"
+        a(href="/sample-node-mongo-app/")!= "Back to Employee List"
